--- a/package.json
+++ b/package.json
@@ -7,14 +7,15 @@
     "trainjs" : "./bin/train_command.js"
   },
   "dependencies": {
-    "LiveScript": "1.1.1",
-    "mkdirp": "~0.3.4",
     "mongoose": "3.6.4",
     "ejs": "0.8.3",
     "fibrous": "0.3.0",
-    "jroad": "*"
+    "jroad": "*",
+    "colors": "*",
+    "diff": "*"
   },
   "devDependencies": {
+    "LiveScript": "1.1.1",
     "mocha": "*",
     "jspec": "*"
   },
