Add link_to helper for show, edit and new action

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "fibers": "1.0.1",
     "jroad": "0.0.5",
     "colors": "*",
-    "diff": "*"
+    "diff": "*",
+    "inflection": "*"
   },
   "devDependencies": {
     "LiveScript": "1.2.0",
