--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "mongoose": "3.6.4",
+    "sequelize": "1.7.0-rc2",
     "fibers": "1.0.1",
     "jroad": "0.0.9",
     "colors": "*",
