feat(using barista router)

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "connect": "*",
     "body-parser": "*",
     "serve-favicon": "*",
-    "urlrouter": "*",
+    "method-override": "*",
+    "barista": "*",
     "jroad": "0.1.0",
     "colors": "*",
     "diff": "*",
