feat(trainjs scaffold)

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
 		"connect-route": "*",
 		"fibers": "*",
 		"colors": "*",
-		"diff": "*"
+		"diff": "*",
+		"inflection": "*"
 	},
 	"devDependencies": {
 		"mocha": "*"
