--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "trainjs",
 	"description": "Web framework",
-	"version": "2.0.12",
+	"version": "2.0.14",
 	"author": "Dang Duy Thanh <thanhdd.it@gmail.com>",
 	"bin": {
 		"trainjs": "./bin/train_command.js"
@@ -36,6 +36,7 @@
 		"trainjs",
 		"Node on train",
 		"Angular",
-		"Ruby on rails"
+		"Ruby on rails",
+		"Sequelize"
 	]
 }
