--- a/template/new_app/package.json
+++ b/template/new_app/package.json
@@ -1,7 +1,9 @@
 {
-  "name": "%%app_name%%",
-  "version": "1.0.0",
-  "dependencies": {
-	"connect": "*"
-  }
+	"name": "%%app_name%%",
+	"version": "1.0.0",
+	"dependencies": {
+		"connect": "*",
+		"angular": "1.5.0",
+		"angular-ui-router": "0.2.18"
+	}
 }
