--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
 	"name": "trainjs",
 	"description": "Web framework",
-	"version": "2.0.29",
+	"version": "2.0.30",
 	"author": "Dang Duy Thanh <thanhdd.it@gmail.com>",
 	"bin": {
 		"trainjs": "./bin/train_command.js"
 	},
 	"dependencies": {
-		"connect-route": "*",
+		"route-pattern": "*",
 		"fibers": "*",
 		"colors": "*",
 		"diff": "*",
